# godel

./: .gitignore  .install-libsocket++.sh  .travis.yml  Dockerfile  README.md  godel.repos  godel.rosinstall
godel/: CMakeLists.txt  package.xml
godel_calibration_config/: CMakeLists.txt  package.xml
godel_calibration_config/config/: sia20d_workspace.srdf
godel_calibration_config/launch/: blending_calibration.launch  calib_moveit_planning_execution.launch  calib_planning_context.launch
godel_calibration_config/urdf/: calib_blending_eff_macro.xacro  calib_kinect2_sensor_macro.xacro  calib_sia20d_workspace.xacro  calib_transform_macro.xacro
godel_calibration_config/yaml/: example_caljob.yaml  godel_mutable_joint_states.yaml  kinect2_camera_def.yaml
godel_keyence_ljv_driver/: CMakeLists.txt  README.md  package.xml
godel_keyence_ljv_driver/cfg/: Keyence.cfg
godel_keyence_ljv_driver/launch/: driver.launch  test_v7080_viz.launch
godel_keyence_ljv_driver/src/: driver.cpp  ljv7_rawdata.cpp  ljv7_rawdata.h
godel_msgs/: CMakeLists.txt  package.xml
godel_msgs/action/: BlendProcessExecution.action  PathPlanning.action  ProcessExecution.action  ProcessPlanning.action  SelectMotionPlan.action
godel_msgs/include/: blending_params_helper.h
godel_msgs/msg/: BlendingPlanParameters.msg  LaserScanRecord.msg  PathPlanningParameters.msg  ProcessPath.msg  ProcessPlan.msg  RobotScanParameters.msg  ScanPlanParameters.msg  SelectedSurfacesChanged.msg  SurfaceBoundaries.msg  SurfaceDetectionParameters.msg
godel_msgs/srv/: BlendProcessExecution.srv  BlendProcessPlanning.srv  BlendingPlan.srv  EnsensoCommand.srv  GetAvailableMotionPlans.srv  GetSurfaceScans.srv  KeyenceProcessExecution.srv  KeyenceProcessPlanning.srv  LoadSaveMotionPlan.srv  OffsetBoundary.srv  PathPlanning.srv  ProcessPlanning.srv  RenameSurface.srv  SelectMotionPlan.srv  SelectSurface.srv  SetScanPoses.srv  SurfaceBlendingParameters.srv  SurfaceDetection.srv  TrajectoryExecution.srv  TrajectoryPlanning.srv
godel_network/: CMakeLists.txt  package.xml
godel_network/src/: irb2400_client.sh
godel_param_helpers/: CMakeLists.txt  package.xml
godel_path_execution/: CMakeLists.txt  package.xml
godel_path_execution/launch/: path_execution_service.launch
godel_path_execution/src/: path_execution_service.cpp  path_execution_service_node.cpp
godel_path_planning/: CMakeLists.txt  package.xml
godel_path_planning/src/: path_planning_node.cpp  trajectory_interpolator.cpp  trajectory_planning.cpp  trajectory_planning_node.cpp  trajectory_utils.cpp
godel_plugins/: CMakeLists.txt  mesher_plugin.xml  package.xml  plugin.xml
godel_plugins/config/: path_planning.yaml
godel_plugins/launch/: robot_blending.launch  rqt_robot_blending.launch
godel_plugins/rqt/: robot_blending.perspective
godel_plugins/rviz/: robot_blending.rviz
godel_polygon_offset/: CMakeLists.txt  README.md  package.xml
godel_polygon_offset/cmake/: FindOpenVoronoi.cmake
godel_polygon_offset/src/: polygon_offset.cpp  polygon_offset_node.cpp
godel_polygon_offset/srv/: OffsetPolygon.srv
godel_process_execution/: CMakeLists.txt  package.xml
godel_process_execution/launch/: abb_blend_process_execution.launch  blend_process_execution.launch  keyence_process_execution.launch  quelltech_process_execution.launch
godel_process_execution/src/: abb_blend_process_service.cpp  abb_blend_process_service_node.cpp  abb_keyence_process_service.cpp  abb_keyence_process_service_node.cpp  blend_process_service.cpp  blend_process_service_node.cpp  keyence_process_service.cpp  keyence_process_service_node.cpp  motoman_blend_process_service.cpp  motoman_blend_process_service_node.cpp  motoman_keyence_process_service.cpp  motoman_keyence_process_service_node.cpp  process_utils.cpp  process_utils.h  quelltech_process_service.cpp  quelltech_process_service_node.cpp
godel_process_path_generation/: CMakeLists.txt  README.md  package.xml
godel_process_path_generation/launch/: demo_path_generator.launch  process_visualization.launch
godel_process_path_generation/src/: mesh_importer.cpp  offset_sorter.patch  polygon_pts.cpp  polygon_utils.cpp  process_path.cpp  process_path_generator.cpp  process_path_generator_node.cpp  process_path_visualization_node.cpp  process_pt.cpp  process_transition.cpp
godel_process_path_generation/srv/: VisualizeBlendingPlan.srv
godel_process_path_generation/test/: path_visualization.rviz  test_MeshImporter.cpp  test_ProcessPathGenerator.cpp  test_common_functions.h  test_polygon_utils.cpp
godel_process_planning/: CMakeLists.txt  cat.pcd  package.xml
godel_process_planning/config/: process_planning.yaml
godel_process_planning/launch/: process_planning.launch  pub_cat.launch
godel_process_planning/src/: blend_process_planning.cpp  common_utils.cpp  common_utils.h  generate_motion_plan.cpp  generate_motion_plan.h  godel_process_planning.cpp  godel_process_planning_node.cpp  keyence_process_planning.cpp  path_transitions.cpp  path_transitions.h  quelltech_process_planning.cpp  trajectory_utils.cpp  trajectory_utils.h
godel_qa_server/: CMakeLists.txt  package.xml
godel_robot_config/: CMakeLists.txt  godel_rviz_config.rviz  package.xml
godel_robot_config/launch/: xacrodisplay.launch
godel_robot_config/meshes/: Deburring_eff_Collision_Model.STL
godel_robot_config/urdf/: asus_sensor_macro.xacro  blending_eff_macro.xacro  irb2400_workspace.xacro  irb6640_workspace.xacro  kinect2_sensor_macro.xacro  kinect_sensor_macro.xacro  sia20d_workspace.urdf  sia20d_workspace.xacro  workspace_components.xacro  workspace_components_swri.xacro
godel_scan_analysis/: CMakeLists.txt  package.xml
godel_scan_analysis/launch/: scan_analysis.launch
godel_scan_analysis/src/: godel_scan_analysis_node.cpp  godel_scan_test_publisher.cpp  keyence_scan_server.cpp  quelltech_scan_server.cpp  scan_fusion_test_node.cpp  scan_roughness_scoring.cpp
godel_simple_gui/: CMakeLists.txt  package.xml  plugin.xml
godel_simple_gui/src/: blending_panel.cpp  blending_widget.cpp  options_submenu.cpp  parameter_window_base.cpp
(+517 files in other folders)
