<?xml version="1.0"?>
<package>
  <name>godel</name>
  <version>0.0.0</version>
  <description>The godel metapackage</description>

  <maintainer email="ros-industrial@todo.todo">ros-industrial</maintainer>

  <license>Apache2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>godel_plugins</run_depend>
	<run_depend>godel_surface_detection</run_depend>

	<export>
		<metapackage/>
	</export>
</package>
