<?xml version="1.0"?>
<package>
  <name>godel_msgs</name>
  <version>0.0.0</version>
  <description>The godel_msgs package</description>
  <maintainer email="jnicho@swri.org">jnicho</maintainer>
  <license>Apache2</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>genmsg</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
</package>
