<?xml version="1.0"?>
<package format="2">
  <name>godel_msgs</name>
  <version>0.0.0</version>
  <description>The godel_msgs package</description>

  <maintainer email="jnicho@swri.org">jnicho</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>genmsg</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
