<?xml version="1.0"?>
<package>
  <name>godel_network</name>
  <version>0.0.1</version>
  <description>The godel_network package</description>

  <maintainer email="chenchengshao@gmail.com">chencheng shao</maintainer>

  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
