<?xml version="1.0"?>
<package>
  <name>godel_path_execution</name>
  <version>0.1.0</version>
  <description>
    This package manages the execution of joint trajectories
    on the physical platform. Many components in Godel may
    issue movement commands, and this package is envisioned
    as a gate keeper of this motion. 
  </description>

  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>godel_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>industrial_robot_simulator_service</build_depend>

  <run_depend>actionlib</run_depend
  ><run_depend>godel_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>industrial_robot_simulator_service</run_depend>

</package>
