<?xml version="1.0"?>
<package>
  <name>godel_path_planning</name>
  <version>0.0.0</version>
  <description>The godel_path_planning package performs high-level planning management for Godel surface blending</description>

  <maintainer email="dpsolomon@gmail.com">Dan Solomon</maintainer>
  <maintainer email="jnicho@swri.org">Jorge Nicho</maintainer>

  <license>Apache2.0</license>

  <url type="website">https://github.com/ros-industrial-consortium/godel</url>

  <author email="dpsolomon@gmail.com">Dan Solomon</author>
  <author email="jnicho@swri.org">Jorge Nicho</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>godel_msgs</build_depend>
  <build_depend>godel_process_path_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>descartes_planner</build_depend>
  <build_depend>descartes_moveit</build_depend>
  <build_depend>descartes_trajectory</build_depend>

  <run_depend>godel_msgs</run_depend>
  <run_depend>godel_process_path_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>descartes_planner</run_depend>
  <run_depend>descartes_moveit</run_depend>
  <run_depend>descartes_trajectory</run_depend>
  
</package>
