<?xml version="1.0"?>
<package>
  <name>godel_plugins</name>
  <version>0.1.0</version>
  <description>
    A developer's user-interface that interacts with the Godel
    blending server. 
  </description>

  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
	<build_depend>godel_msgs</build_depend>
	<build_depend>rviz</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
	<run_depend>rviz</run_depend>
	<run_depend>godel_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
		<rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>
