<?xml version="1.0"?>
<package format="2">
  <name>godel_plugins</name>
  <version>0.1.0</version>
  <description>
    A developer's user-interface that interacts with the Godel
    blending server. 
  </description>

  <maintainer email="jmeyer@swri.org">Jonathan Meyer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>rviz</depend>
  <depend>godel_msgs</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>

</package>
