<?xml version="1.0"?>
<package>
  <name>godel_polygon_offset</name>
  <version>0.0.0</version>
  <description>The godel_polygon_offset package implements a method to create offset polygons from  an input set of polygon boundaries. This package utilizes the openvoronoi package created by Anders Wallin https://github.com/aewallin/openvoronoi/ </description>

  <maintainer email="dpsolomon@gmail.com">Dan Solomon</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/ros-industrial/godel/godel_polygon_offset</url>
  <author email="dpsolomon@gmail.com">Dan Solomon</author>

  <!-- Build/run/test depends -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>godel_process_path_generation</build_depend>
  <build_depend>godel_openvoronoi</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>godel_process_path_generation</run_depend>
  <run_depend>godel_openvoronoi</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
